Implementation of Delete Watchlist Scrips Completed
