# src/app/watchlist/models/deleteWatchlistModel.go
@@ -1,6 +1,6 @@
 package models
 
 type DeleteWatchlistScripsRequest struct {
-	WatchlistName string `json:"watchlist_name" validate:"required" example:"Mid Watchlist"`
-	Scrips        []int  `json:"scrips" validate:"required" example:"44,22"`
+	WatchlistName string `json:"watchlist_name" validate:"required" example:"Mid watchists"`
+	Scrips        []int  `json:"scrips" validate:"required" example:"1,3"`
 }
